--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "scss": "^0.2.4",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
@@ -19,6 +20,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "vite": "^3.0.9"
   }
 }
